--- a/Codigo/Servidor Truco/.classpath
+++ b/Codigo/Servidor Truco/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="lib" path="C:/Users/Agustin/Documents/GitHub/AplicacionesDistribuidas/Librerias/jtds-1.2.5.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Agustin/Documents/GitHub/AplicacionesDistribuidas/Librerias/slf4j-api-1.5.6.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Agustin/Documents/GitHub/AplicacionesDistribuidas/Librerias/slf4j-simple-1.5.6.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Repositorio Truco"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
