--- a/Codigo/Servidor Truco/bin/hibernate.properties
+++ b/Codigo/Servidor Truco/bin/hibernate.properties
@@ -1,9 +1,10 @@
 
 hibernate.dialect org.hibernate.dialect.SQLServerDialect
 hibernate.connection.driver_class net.sourceforge.jtds.jdbc.Driver
-hibernate.connection.url jdbc:jtds:sqlserver://localhost:1433;databaseName=TPDistribuidas
-hibernate.connection.username distribuidas
-hibernate.connection.password distribuidas
+#hibernate.connection.url jdbc:jtds:sqlserver://localhost:1433;databaseName=TPDistribuidas
+hibernate.connection.url jdbc:jtds:sqlserver://localhost:1433;databaseName=TPDISTRIBUIDAS
+hibernate.connection.username juan
+hibernate.connection.password gaston12345
 hibernate.connection.pool_size 2
 hibernate.connection.autocommit true
 
@@ -14,7 +15,7 @@ hibernate.cache.provider_class org.hibernate.cache.HashtableCacheProvider
 #hibernate.format_sql true
 #hibernate.show_sql true
 
-hibernate.hbm2ddl.auto create-drop
+#hibernate.hbm2ddl.auto create-drop
 #hibernate.hbm2ddl.auto create
 #hibernate.hbm2ddl.auto update
 #hibernate.hbm2ddl.auto validate
