--- a/Codigo/Servidor Truco/src/hibernate.properties
+++ b/Codigo/Servidor Truco/src/hibernate.properties
@@ -1,10 +1,12 @@
 
 hibernate.dialect org.hibernate.dialect.SQLServerDialect
 hibernate.connection.driver_class net.sourceforge.jtds.jdbc.Driver
-#hibernate.connection.url jdbc:jtds:sqlserver://localhost:1433;databaseName=TPDistribuidas
-hibernate.connection.url jdbc:jtds:sqlserver://localhost:1433;databaseName=TPDISTRIBUIDAS
-hibernate.connection.username juan
-hibernate.connection.password gaston12345
+hibernate.connection.url jdbc:jtds:sqlserver://localhost:1433;databaseName=TPDistribuidas
+#hibernate.connection.url jdbc:jtds:sqlserver://localhost:1433;databaseName=TPDISTRIBUIDAS
+#hibernate.connection.username juan
+#hibernate.connection.password gaston12345
+hibernate.connection.username distribuidas
+hibernate.connection.password distribuidas
 hibernate.connection.pool_size 2
 hibernate.connection.autocommit true
 
