arreglos en la base de datos que no funcionaba correctamente

--- a/Codigo/Servidor Truco/bin/hibernate.properties
+++ b/Codigo/Servidor Truco/bin/hibernate.properties
@@ -5,8 +5,8 @@ hibernate.connection.url jdbc:jtds:sqlserver://localhost:1433;databaseName=TPDis
 #hibernate.connection.url jdbc:jtds:sqlserver://localhost:1433;databaseName=TPDISTRIBUIDAS
 #hibernate.connection.username juan
 #hibernate.connection.password gaston12345
-hibernate.connection.username distribuidas
-hibernate.connection.password distribuidas
+hibernate.connection.username sa
+hibernate.connection.password bocajuniors
 hibernate.connection.pool_size 2
 hibernate.connection.autocommit true
 
