--- a/AD_TPO_WEB/WebContent/WEB-INF/web.xml
+++ b/AD_TPO_WEB/WebContent/WEB-INF/web.xml
@@ -1,7 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>AD_TPO_WEB</display-name>
   <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+    <description></description>
+    <display-name>esperandoPartido</display-name>
+    <servlet-name>esperandoPartido</servlet-name>
+    <servlet-class>Servlets.esperandoPartido</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>esperandoPartido</servlet-name>
+    <url-pattern>/esperandoPartido</url-pattern>
+  </servlet-mapping>
 </web-app>
