Chau Session, nueva modalidad administrar grupos

--- a/AD_TPO_WEB/WebContent/WEB-INF/web.xml
+++ b/AD_TPO_WEB/WebContent/WEB-INF/web.xml
@@ -59,4 +59,14 @@
     <servlet-name>ReproducirPartidoServlet</servlet-name>
     <url-pattern>/ReproducirPartidoServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>VolverAlMenuServlet</display-name>
+    <servlet-name>VolverAlMenuServlet</servlet-name>
+    <servlet-class>servlets.VolverAlMenuServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>VolverAlMenuServlet</servlet-name>
+    <url-pattern>/VolverAlMenuServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
